# phishing-detector

./: .gitignore  README.md  config.py  install.bat  install.sh  isphishing  main.py  pyproject.toml  requirements.txt  setup.py  setup_nltk.py  train.py
isphishing/alert/: alert_system.py
isphishing/detector/: phishing_cli.py  phishing_detector.py  phishing_setup.py  threat_report.py
isphishing/features/: feature_extractor.py
isphishing/inputs/: base_input.py  email_input.py  url_input.py
isphishing/model/: evaluator.py
models/: model.pkl  model_email.pkl  model_url.pkl  vectorizer.pkl  vectorizer_email.pkl  vectorizer_url.pkl
src/alert/: alert_system.py
src/detector/: phishing_cli.py  phishing_detector.py  phishing_setup.py
src/features/: feature_extractor.py  text_cleaner.py
src/inputs/: email_input.py  url_input.py
src/model/: evaluator.py  ml_model.py
tests/: test_detector.py  test_inputs.py  test_model.py
