[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isphishing"
version = "2.0.3"
authors = [
  { name="Habib Ilyas & Boukyod Abdessamad", email="ilyas.habib.23@ump.ac.ma" },
]
description = "AI-powered phishing detector for URLs and emails"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn",
    "pandas",
    "nltk",
    "tldextract",
    "requests",
    "joblib",
    "numpy",
    "xgboost",
]

[project.scripts]
isphishing = "src.detector.phishing_cli:main_cli"
isphishing-setup = "src.detector.phishing_setup:setup_cli"

[project.urls]
Homepage = "https://github.com/f3d4yn/isphishing"

[tool.setuptools.package-data]
"*" = ["models/*.pkl"]
[tool.setuptools.packages.find]
include = ["isphishing*"]
exclude = ["data*", "models*", "logs*", "notebooks*", "tests*"]